# ai-travel-planner

./: .gitignore  1. CrewAI Installation and Run Guide.md  2. AgentCore Installation and Run Guide.md  Dockerfile  README.md  RunGuide.md  pyproject.toml  report.md  requirements.txt  streamlitui.py  streamlitui_api.py
src/ai_travel_planner/: crew.py  main.py
src/ai_travel_planner/config/: agents.yaml  tasks.yaml
